# python-extensions

./: install.ahk
AHIHook/: README.md  pyproject.toml
AHIHook/src/AHIHook/: __init__.py  runpyfile.ahk
AHIHook/src/AHIHook/logs/: log.ans
browser/: README.md  pyproject.toml
browser/src/browser/: __init__.py
misc/: pyproject.toml
misc/src/misc/: __init__.py  sfi.py  sfi.spec
misc/src/misc/logs/: log.ans
