[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AHIHook"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pythonnet",
  "AHIHook==0.0.1"
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/AHIHook#readme"
Issues = "https://github.com/U.N. Owen/AHIHook/issues"
Source = "https://github.com/U.N. Owen/AHIHook"

[tool.hatch.version]
path = "src/AHIHook/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/AHIHook tests}"

[tool.coverage.run]
source_pkgs = ["AHIHook", "tests"]
branch = true
parallel = true
omit = [
  "src/AHIHook/__about__.py",
]

[tool.coverage.paths]
AHIHook = ["src/AHIHook", "*/AHIHook/src/AHIHook"]
tests = ["tests", "*/AHIHook/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
